[gd_scene load_steps=11 format=3 uid="uid://p5f8k37hf6ri"]

[ext_resource type="Script" uid="uid://bugeq1tvmyiva" path="res://Scripts/Words/level_forest_00.gd" id="1_p4nya"]
[ext_resource type="PackedScene" uid="uid://cbcvrtxuukd1p" path="res://Scene/Roons/map_forest.tscn" id="3_3juwn"]
[ext_resource type="Texture2D" uid="uid://dyvuint5ywvp0" path="res://Assets/sprites/wind_test.png" id="3_g3167"]
[ext_resource type="Script" uid="uid://b3mtr63ern2vp" path="res://Scripts/wind_particles.gd" id="4_g3167"]

[sub_resource type="Curve" id="Curve_vwbtm"]
_data = [Vector2(0, 0.20062119), 0.0, 0.0, 0, 0, Vector2(0.49689445, 0.6043478), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_appop"]
curve = SubResource("Curve_vwbtm")

[sub_resource type="Curve" id="Curve_g3167"]
_limits = [0.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, 3.217392), 0.0, 0.0, 0, 0, Vector2(1, 5.5590067), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_udovy"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.24844721, 1), 0.0, 0.0, 0, 0, Vector2(0.5031056, -0.9540372), 0.0, 0.0, 0, 0, Vector2(0.7546584, 1), 0.0, 0.0, 0, 0, Vector2(0.9937888, -0.0012421608), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_vwbtm"]
curve_x = SubResource("Curve_g3167")
curve_y = SubResource("Curve_udovy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vexlw"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(430, 258, 1)
spread = 0.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
directional_velocity_min = 19.999983
directional_velocity_max = 49.99998
directional_velocity_curve = SubResource("CurveXYZTexture_vwbtm")
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_appop")

[node name="Level_florest_00" type="Node2D"]
script = ExtResource("1_p4nya")

[node name="map" parent="." instance=ExtResource("3_3juwn")]

[node name="shadow_pos" type="Marker2D" parent="."]
position = Vector2(1814, 550)

[node name="shadow_pos2" type="Marker2D" parent="."]
position = Vector2(2468, 379)

[node name="shadow_pos3" type="Marker2D" parent="."]
position = Vector2(2585, 610)

[node name="vfx" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="vfx"]
amount = 6
texture = ExtResource("3_g3167")
lifetime = 8.0
fixed_fps = 60
trail_enabled = true
trail_lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_vexlw")
script = ExtResource("4_g3167")
